--- a/src/lib/sass/main.scss
+++ b/src/lib/sass/main.scss
@@ -478,7 +478,7 @@
 			text-align: left;
 			padding: 0.5em 1em 0.5em 1em;
 			color: #fff;
-			background: #222729 url('static/images/overlay.png');
+			background: #222729; // url('static/images/overlay.png');
 		}
 
 		thead {
@@ -507,7 +507,8 @@
 		background-color: #8ebebc;
 		border: 0;
 		cursor: pointer;
-		@include vendor('background-image', ('linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))', 'url("images/overlay.png")'));
+		// @include vendor('background-image', ('linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))', 'url("images/overlay.png")'));
+		@include vendor('background-image', ('linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))'));
 		@include vendor('transition', 'background-color 0.35s ease-in-out');
 
 		&:hover {
@@ -570,7 +571,7 @@
 		@include vendor('display', 'flex');
 		@include vendor('flex-direction', 'column');
 		@include vendor('justify-content', 'space-between');
-		background: #222629 url('static/images/overlay.png');
+		background: #222629; // url('static/images/overlay.png');
 		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
 		color: #fff;
 		height: 100%;
@@ -727,7 +728,7 @@
 			padding: 4em 0;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 			text-align: center;
-			background-image: url('static/images/overlay.png');
+			// background-image: url('static/images/overlay.png');
 
 			&.dark {
 				color: #ddd;
@@ -760,7 +761,7 @@
 
 			&.one {
 				background-color: #81918E;
-				background-image: url('../../images/banner.jpg');
+				// background-image: url('../../images/banner.jpg');
 			}
 
 			&.two {
@@ -965,7 +966,7 @@
 				width: _size(header);
 				z-index: _misc(z-index-base) + 2;
 				width: _size(header);
-				background: #222729 url('static/images/overlay.png');
+				background: #222729; // url('static/images/overlay.png');
 				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
 
 				.top {
