fix: remove son posts and fixing styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,8 +36,7 @@ const posts = (await getCollection('blog')).sort(
 			<hq>Hola! soy Salvador Rioboo.</hq>
 			<p>Full Stack Developer de la ciudad de Málaga</p>
 
-			<section>
-				<!-- <ul> -->
+			<!-- <section>
 					{
 						posts.map((post) => (
 							<div>
@@ -51,8 +50,7 @@ const posts = (await getCollection('blog')).sort(
 							</div>
 						))
 					}
-				<!-- </ul> -->
-			</section>
+			</section> -->
 		</main>
 		<Footer />
 	</body>
