feat: little css improvements for content tables and headers

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,16 +60,16 @@ h6 {
 	line-height: 1.2;
 }
 h1 {
-	font-size: 3.052em;
+	font-size: 2.052em;
 }
 h2 {
-	font-size: 2.441em;
+	font-size: 1.8em;
 }
 h3 {
-	font-size: 1.953em;
+	font-size: 1.6em;
 }
 h4 {
-	font-size: 1.563em;
+	font-size: 1.4em;
 }
 h5 {
 	font-size: 1.25em;
@@ -152,4 +152,10 @@ hr {
 	clip-path: inset(50%);
 	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
+}
+
+/* Tables */
+td {
+	border: 0.5px solid grey;
+	padding: 0.3em;
 }
