fix: post title background

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -34,7 +34,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				border-radius: 12px;
 				box-shadow: var(--box-shadow);
 				background: no-repeat url("/blog-placeholder-5.jpg") center center;
-				background-size: 1180px 510px;
+				background-size: 100%;
 			}
 			.prose {
 				width: 720px;
