feat: improve blog visualization

--- a/src/pages/_about.astro
+++ b/src/pages/_about.astro
@@ -27,7 +27,7 @@ import Layout from '../layouts/BlogPost.astro';
 		</ul>
 
 		<h4> Skills </h4>
-	<p style="align: left; flex: content; flex-direction: row">
+	<p style="display: flex; flex-direction: row">
 		<a href="https://www.oracle.com/java/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/java-colored.svg" width="36" height="36" alt="Java" /></a>
 		<a href="https://vuejs.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/vuejs-colored.svg" width="36" height="36" alt="Vue" /></a>
 		<a href="https://nuxtjs.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/nuxtjs-colored.svg" width="36" height="36" alt="Nuxtjs" /></a>
