--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -34,7 +34,7 @@ const posts = (await getCollection('blog')).sort(
 				text-decoration: none;
 				transition: 0.2s ease;
 			}
-			ul li:first-child {
+			/* ul li:first-child {
 				width: 100%;
 				margin-bottom: 1rem;
 				text-align: center;
@@ -44,7 +44,7 @@ const posts = (await getCollection('blog')).sort(
 			}
 			ul li:first-child .title {
 				font-size: 2.369rem;
-			}
+			}*/
 			ul li img {
 				margin-bottom: 0.5rem;
 				border-radius: 12px;
