fix: update home text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const posts = (await getCollection('blog')).sort(
 				<div class="text-xl w-full">
 					Full Stack Developer</div>
 				<div class="w-full">
-					Desarrollador web durante 15 años usando Java en el backend y múltiples tecnologías en el frontend.
+					Desarrollador web durante 15 años usando Java en el backend y varias tecnologías frontend.
 				</div>
 
 				<!-- <ul>
