--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ const posts = (await getCollection('blog')).sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 ---
-<!-- 
+
 <style>
-	section {
+	/* section {
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
@@ -22,9 +22,12 @@ const posts = (await getCollection('blog')).sort(
 	section div {
 		margin: 5px;
 		width: 30%;
+	}*/
+	img {
+		margin-left: 10px;
 	}
 </style>
- -->
+ 
 
 <!doctype html>
 <html lang="en">
@@ -65,7 +68,7 @@ const posts = (await getCollection('blog')).sort(
 					</li>
 				</ul>  -->
 
-				<h5 class="w-full"> Habilidades: </h5>
+			 	<!--<h5 class="w-full"> Habilidades: </h5>
 				<p class="flex flex-direction-row">
 					<a href="https://www.oracle.com/java/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/java-colored.svg" width="36" height="36" alt="Java" /></a>
 					<a href="https://vuejs.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/vuejs-colored.svg" width="36" height="36" alt="Vue" /></a>
@@ -76,6 +79,40 @@ const posts = (await getCollection('blog')).sort(
 					<a href="https://developer.mozilla.org/en-US/docs/Glossary/HTML5" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/html5-colored.svg" width="36" height="36" alt="HTML5" /></a>
 					<a href="https://reactjs.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/react-colored.svg" width="36" height="36" alt="React" /></a>
 					<a href="https://www.oracle.com/uk/index.html" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/oracle-colored.svg" width="36" height="36" alt="Oracle" /></a>
+				</p>  -->
+			</section>
+			<section class="flex flex-row w-full flex-wrap">
+			<h5 class="w-full"> Habilidades </h5>
+				<p class="flex flex-direction-row">
+					<a href="https://www.spring.io/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Spring-Light.svg" width="36" height="36" alt="Spring" /></a>
+					<a href="https://www.oracle.com/java/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Java-Light.svg" width="36" height="36" alt="Java" /></a>
+					<a href="https://angular.io/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Angular-Light.svg" width="36" height="36" alt="Angular" /></a>
+					<a href="https://www.oracle.com/uk/index.html" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Oracle.svg" width="36" height="36" alt="Oracle" /></a>
+					<a href="https://www.postgresql.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/PostgreSQL-Light.svg" width="36" height="36" alt="Postgres" /></a>
+					<a href="https://www.docker.com/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Docker.svg" width="36" height="36" alt="Docker" /></a>
+					<a href="https://kubernetes.io/es/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Kubernetes.svg" width="36" height="36" alt="Kubernetes" /></a>
+					<!-- <a href="https://developer.mozilla.org/en-US/docs/Glossary/HTML5" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/HTML.svg" width="36" height="36" alt="HTML5" /></a>
+					<a href="https://sass-lang.com/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Sass.svg" width="36" height="36" alt="Sass" /></a> -->
+				</p>
+			</section>
+			<section class="flex flex-row w-full flex-wrap">
+				<h5 class="w-full">Hablidades en las que estoy trabajando</h5>
+
+				<p class="flex flex-direction-row">
+					<a href="https://en.wikipedia.org/wiki/C_(programming_language)" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/C.svg" width="36" height="36" alt="C" /></a>
+					<a href="https://www.python.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Python-Light.svg" width="36" height="36" alt="Python" /></a>
+					<a href="https://nuxtjs.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/NuxtJS-Light.svg" width="36" height="36" alt="Nuxtjs" /></a>
+					<a href="https://vuejs.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/VueJS-Light.svg" width="36" height="36" alt="Vue" /></a>
+					<a href="https://svelte.dev/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Svelte.svg" width="36" height="36" alt="Svelte" /></a>
+				</p>
+			</section>
+			<section class="flex flex-row w-full flex-wrap">
+				<h5 class="w-full">Formación</h5> 
+
+				<p class="flex flex-direction-row">
+					<a href="https://reactjs.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/React-Light.svg" width="36" height="36" alt="React" /></a>
+					<a href="https://go.dev/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/GoLang.svg" width="36" height="36" alt="Golang" /></a>
+					<a href="https://kotlinlang.org/" target="_blank" rel="noreferrer"><img src="https://raw.githubusercontent.com/srioboo/srioboo/main/assets/Kotlin-Light.svg" width="36" height="36" alt="Kotlin" /></a>
 				</p>
 			</section>
 
