--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -34,7 +34,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				border-radius: 12px;
 				box-shadow: var(--box-shadow);
 				/* background: no-repeat url("/blog-placeholder-5.jpg") center center; */
-				background: #008383bf;
+				/* background: #008383bf; */
+				background: #9ab0d578;
 				background-size: 100%;
 			}
 			.prose {
@@ -52,7 +53,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			}
 			.title h1 {
 				margin: 0 0 0.5em 0;
-				color: white;
+				color: rgb(var(--black));
 			}
 			.date {
 				margin-bottom: 0.5em;
